--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <strong>Get Anagrams</strong><br/>
+            <a href="/">Home</a>
         </header>
         <main>
             <form action="{{url_for('results')}}" method="POST" accept-charset="utf-8">
