--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,26 +1,87 @@
 body {
     background: RGBA(238, 238, 238, 1.00);
     font-size: 16px;
+    font-family: sans-serif;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+}
+div {
+    margin: 10px auto;
+}
+header {
+    text-align: left;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    width: 100%;
+    right: 0px;
+    top: 0px;
+    right: 0px;
+    padding: 5px 20px;
+    background: #333;
 }
 
-header {
-    padding-left: 50px;
-    padding-right: 50px;
+header a:link {
+    color: #ddd;
+    text-decoration: none;
+}
+
+header a:visited {
+    color: #ddd;
 }
 
 main {
-    padding: 50px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    width: 100%;
+    padding: auto;
+    margin: auto;
+    position: absolute;
+    vertical-align: middle;
+}
+
+#content_header {
+    text-align: center;
+    margin: 20px auto;
+    font-weight: bold;
+}
+
+#content_body {
+    margin: auto;
+    text-align: center;
+}
+
+input[type=text] {
+    font-size: 16px;
+    margin: 10px auto;
+    height: 30px;
+    width: 200px;
+    border: 0px;
+    border-radius: 3px;
+    padding: 5px 10px;
     
 }
 
-input[type=number] {
-    width: 50px;
-}
-
 input[type=submit], input[type=reset] {
+    font-size: 16px;
     cursor: pointer;
-    height: 20px;
-    width: 100px;
+    height: 30px;
+    width: 200px;
+    padding : 5px;
+    margin: 10px auto;
+    border: 0px;
+    border-radius: 3px;
+    background: RGBA(0, 116, 190, 1.00);
+    color: #ccc
 }
 
 #words_found {
@@ -29,6 +90,11 @@ input[type=submit], input[type=reset] {
 
 ol {
     color: orange;
+    text-align: center;
+}
+
+li {
+    text-align: center;
 }
 
 footer {
@@ -37,4 +103,7 @@ footer {
     text-align: center;
     right: 0px;
     bottom: 0px;
+    padding: auto 5px;
+    background: #000;
+    color: #fff;
 }
