--- a/templates/results.html
+++ b/templates/results.html
@@ -8,18 +8,29 @@
     </head>
     <body>
         <header>
-            <a href="/" target="_blank">Back to home</a>
+            <a href="/">&lt; back</a>
         </header>
-        Word entered: {{inp}}<br/><br/>
-        
-        <span id="words_found">{{found}}</span> words of {{k}} letters are found<br/>
-        <ol>
-        {% for i in f_anagrams %}
-            <li>{{i}}</li>
-        {% endfor%}
-        </ol>
+        <main>
+            <div id="content_header">
+                Word/letters entered: "{{inp}}"<br/><br/>
+            </div>
+            
+            <div id="content_body">
+                Found <span id="words_found">{{f}}</span> {{w}} are found<br/>
+                <div>
+                    <ol>
+                    {% if (f != 0) %}
+                        {% for i in anagrams %}
+                            <li>{{i}}</li>
+                        {% endfor %}
+                    {% endif %}
+                    </ol>
+                </div>
+            </div>
+
+        </main>
         <footer>
-            Created by Gaidink
+            <small>Created by Gaidink</small>
         </footer>
     </body>
 </html>
