--- a/templates/results.html
+++ b/templates/results.html
@@ -17,7 +17,7 @@
             
             <div id="content_bo">
                 <div id="anagrams">
-                    Found <span id="words_found">{{f}}</span> {{w}} are found<br/>
+                    <span id="words_found">{{f}}</span> {{w}} are found<br/>
                     <div>
                         <ol>
                         {% if (f != 0) %}
