--- a/templates/results.html
+++ b/templates/results.html
@@ -17,7 +17,7 @@
             
             <div id="content_bo">
                 <div id="anagrams">
-                    <span id="words_found">{{f}}</span> {{w}} are found<br/>
+                    <span id="words_found">{{f}}</span> {{w}} found<br/>
                     <div>
                         <ol>
                         {% if (f != 0) %}
@@ -29,7 +29,6 @@
                     </div>
                 </div>
             </div>
-
         </main>
         <footer>
             <small>Created by Gaidink</small>
